--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,8 @@ jobs:
         with:
           command: buildozer android debug
           buildozer_version: master
-
+        env:
+          ANDROID_SDK_ACCEPT_LICENSE: true
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
