--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,10 @@ name: CI
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '0 0 1,15 * *'
 
 jobs:
   build:
@@ -10,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      #used to cache dependencies with a timeout
+      # used to cache dependencies with a timeout
       - name: Get Date
         id: get-date
         run: |
@@ -33,7 +37,7 @@ jobs:
         id: buildozer
         with:
           command: buildozer android debug
-          buildozer_version: stable
+          buildozer_version: master
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
